# CAMI

./: .gitignore  CMakeLists.txt  ReadMe.md
compiler/: camic.cabal  compiler.cabal  package.yaml  stack.yaml
compiler/app/: main.hs
compiler/grammar/: update_sylloge.sh
compiler/grammar/C23/: floating-point_subject_sequence.ebnf  lexical.ebnf  phrase_structure.ebnf  preprocessing_directives.ebnf  sylloge.ebnf
compiler/src/: Lib.hs
config/: ReadMe.md  config.toml  configure.py
doc/: arch.drawio  cami.1  design_philosophy.md  index.md
doc/asset/: am_struct.drawio  logic.drawio  sequence_access.drawio
doc/en_us/: cami_bytecode.md  config_manual.md  evaluation.md  feature_support.md  internals.md  operational_semantic.md
doc/zh_cn/: ReadMe.md  cami_bytecode.md  config_manual.md  evaluation.md  feature_support.md  internals.md  operational_semantic.md
etc/: ascii_logo.txt  cami_bc_cloc_conf.txt  ccl.sh  example_hello_world.tbc
evaluation/: Dockerfile  ReadMe.md
evaluation/config/: config.json
evaluation/script/: argument.py  cfg.py  engine.py  eregex.py  main.py  printer.py  result.py
evaluation/test_suite/negative/ub09/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub10/: 1.txt
evaluation/test_suite/negative/ub11/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub12/: 2.c
evaluation/test_suite/negative/ub16/: 1.c  2.c
evaluation/test_suite/negative/ub17/: 1.c  2.c
evaluation/test_suite/negative/ub18/: 1.c  2.c  3.c  4.c  5.c
evaluation/test_suite/negative/ub24/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub25/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub32/: 1.c  2.c
evaluation/test_suite/negative/ub34/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub35/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub36/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub41/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub42/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub43/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub44/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub45/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub46/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub48/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub49/: 1.c  2.c  3.c
evaluation/test_suite/negative/ub50/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub51/: 1.c  2.c
evaluation/test_suite/negative/ub61/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub62/: 1.c  2.c  3.c  4.c
evaluation/test_suite/negative/ub85/: 1.c
evaluation/test_suite/negative/ub86/: 2.c
evaluation/test_suite/positive/: 1.c  2.c
evaluation/test_suite/positive/ub09/: 1.c  2.c  3.c  4.c
evaluation/test_suite/positive/ub10/: 1.c  2.c  3.c  4.c
evaluation/test_suite/positive/ub11/: 1.c  2.c  3.c  4.c
evaluation/test_suite/positive/ub12/: 1.c  1.txt  2.c
evaluation/test_suite/positive/ub13/: 1.txt
evaluation/test_suite/positive/ub16/: 1.c  2.c
evaluation/test_suite/positive/ub17/: 1.c  2.c
evaluation/test_suite/positive/ub18/: 1.c  2.c  3.c  4.c  5.c  6.c
evaluation/test_suite/positive/ub20/: 1.txt
evaluation/test_suite/positive/ub24/: 1.c  2.c  3.c  4.c
evaluation/test_suite/positive/ub25/: 1.c  2.c  (+2 more)
include/: args.h  config.h.in  launcher.h
include/am/: am.h  evaluation.h  exception.h  execute.h  fetch_decode.h  formatter.h  heap_allocator.h  io_def.h  obj_man.h  object.h  spd.h  state.h  trace.h  trace_data.h  ub.h  vmm.h
include/cami/: ReadMe.md  io_def.h  std.h
include/foundation/: cross_platform.h  exception.h  logger.h  undef_cross_platform.h  value.h
include/foundation/type/: def.h  helper.h  mm.h
include/lib/: array.h  assert.h  bitmap.h  compiler_guarantee.h  downcast.h  format.h  list.h  optional.h  shared_ptr.h  slice.h  utils.h
include/translate/: assembler.h  bytecode.h  deassembler.h  deserializer.h  dumper.h  exception.h  linker.h  loader.h  pipe.h  serializer.h
include/ui/: ui.h
src/: CMakeLists.txt  args.cpp  launcher.cpp  main.cpp  supporting_test.cpp
src/am/: CMakeLists.txt  am.cpp  evaluation.cc  execute.cpp  fetch_decode.cpp  formatter.cpp  heap_allocator.cpp  obj_man.cpp  object.cpp  trace.cpp  ub.cpp  vmm.cpp
src/am/evaluation/: am_eval.cc  cast.cc  raw_value_eval.cc  valuebox_eval.cc
src/foundation/: CMakeLists.txt  logger.cpp
src/foundation/type/: def.cpp  helper.cpp  mm.cpp
src/translate/: CMakeLists.txt  deassembler.cpp  linker.cpp
src/translate/assembler/: attribute.cpp  code.cpp  data.cpp  entity.cpp  entry.cpp  lexer.cpp
(+62 files in other folders)
